[package]
name = "enum-primitive-derive"
version = "0.2.1-alpha.0"
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
license = "MIT"
description = "enum_primitive implementation using procedural macros to have a custom derive"
readme = "README.md"
homepage = "https://gitlab.com/cardoe/enum-primitive-derive"
repository = "https://gitlab.com/cardoe/enum-primitive-derive.git"
keywords = ["derive", "enum", "fromprimitive", "primitive", "ffi"]
categories = ["rust-patterns"]
edition = "2018"

[badges]
gitlab = { repository = "cardoe/enum-primitive-derive" }

[lib]
proc-macro = true

[dependencies]
num-traits = "0.2"
quote = "1"
syn = "1"
